--- a/pabi_import_journal_entries/views/pabi_import_journal_entries_view.xml
+++ b/pabi_import_journal_entries/views/pabi_import_journal_entries_view.xml
@@ -71,6 +71,9 @@
                                         <field name="partner_id"/>
                                         <field name="activity_group_id"/>
                                         <field name="activity_id"/>
+                                        <field name="product_id"/>
+                                        <field name="asset_code"/>
+                                        <field name="asset_profile_code"/>
                                         <field name="check_commit" invisible="1"/>
                                     </tree>
                                 </field>
