[FIX] name and asset_code

--- a/pabi_import_journal_entries/views/pabi_import_journal_entries_view.xml
+++ b/pabi_import_journal_entries/views/pabi_import_journal_entries_view.xml
@@ -73,7 +73,7 @@
                                         <field name="activity_id"/>
                                         <field name="product_id"/>
                                         <field name="asset_code"/>
-                                        <field name="asset_profile_code"/>
+                                        <field name="asset_profile_name"/>
                                         <field name="check_commit" invisible="1"/>
                                     </tree>
                                 </field>
